[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/0x72_16x16DungeonTileset.v4.png" type="Texture" id=1]
[ext_resource path="res://scene/player.gd" type="Script" id=2]
[ext_resource path="res://scene/sword.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Realistic_Punch-Mark_DiAngelo-1609462330.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224.476, 235.563, 15.1111, 20.4444 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.01063
height = 7.0223

[sub_resource type="Animation" id=3]
resource_name = "shake"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2, 2 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "take_damage"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 10.6634, 0.140308 )

[node name="Sword" parent="Sprite/Position2D" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.140306, 0.841846 )
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationMovement" type="AnimationPlayer" parent="."]
anims/shake = SubResource( 3 )

[node name="AnimationDamaged" type="AnimationPlayer" parent="."]
anims/take_damage = SubResource( 4 )

[node name="AudioDamaged" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -300
limit_top = -250
limit_right = 300
limit_bottom = 250
__meta__ = {
"_edit_lock_": true
}
